# Collector

./: .cursorignore  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: API_GUIDE.md  CLI_GUIDE.md  OPTIMIZATION_EVOLUTION.md
scripts/: performance_test.py  profile_collection.py
src/api/: auth.py  auth_routes.py  job_repository.py  main.py  models.py  models_extended.py  rate_limiter.py  routes.py  routes_extended.py  routes_v2.py  schemas.py  websocket_routes.py
src/archive/: archiver.py
src/cli/: main.py
src/core/: __init__.py  collection_service.py  config.py  exceptions.py  file_filter.py  file_operations.py  path_sanitizer.py  progress_tracker.py  security_constants.py  validator.py  worker_pool.py
src/email/: __init__.py  exceptions.py  sender.py
src/logger/: __init__.py  logger.py
src/types/: __init__.py  aliases.py
src/ui/: config_dialog.py  config_manager_window.py  history_window.py  main.py  main_window.py  preview_window.py  progress_window.py
src/ui/controllers/: collection_controller.py
src/utils/: audit_logger.py  collection_history.py  config_manager.py  exception_wrapper.py  pc_info_collector.py  pc_info_config.py  process_manager.py  translations.py  yaml_config_loader.py
tests/: conftest.py  test_api.py  test_archiver.py  test_cli.py  test_collection_service.py  test_exception_wrapper.py  test_file_filter.py  test_file_operations.py  test_path_sanitizer.py  test_production_logs.py  test_progress_tracker.py  test_security.py  test_validator.py  test_worker_pool.py
tests/test_files/logs_10.12.2025_16_25_29/: Journal_251210.txt  config.yaml  pc_info.json
tests/test_files/logs_11.12.2025_12_38_49/: config.yaml  pc_info.json
